--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-naver-font": "^1.0.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.17.1",
+    "react-native-selectbox": "^0.1.2",
     "react-native-svg": "^12.1.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
+    "react-select-box": "^3.0.1",
+    "react-selectbox": "^1.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
