--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.17.1",
     "react-native-selectbox": "^0.1.2",
+    "react-native-simple-modal": "^9.0.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^2.15.2",
