--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "lottie-react-native": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -25,6 +26,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-naver-font": "^1.0.0",
     "react-native-picker-select": "^8.0.4",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.17.1",
     "react-native-selectbox": "^0.1.2",
