--- a/app.json
+++ b/app.json
@@ -1,32 +1,12 @@
 {
   "expo": {
-    "name": "DNA_Android",
-    "slug": "DNA_Android",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+   "name": "DNA",
+   "icon": "./assets/appicon.png",
+   "version": "1.0.0",
+   "slug": "DNA",
+   "android": {
+     "package": "com.busanpanda.DNA",
+     "versionCode": 1
+   }
   }
 }
