--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cli": "^4.14.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^5.11.7",
@@ -17,14 +17,17 @@
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
-    "lottie-react-native": "^3.5.0",
+    "expo-updates": "~0.4.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-macos": "^0.63.16",
     "react-native-naver-font": "^1.0.0",
+    "react-native-onesignal": "^4.0.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-native-reanimated": "^1.13.2",
@@ -34,6 +37,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^2.15.2",
+    "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-select-box": "^3.0.1",
@@ -41,7 +45,12 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.13.1"
   },
-  "private": true
+  "private": true,
+  "name": "DNA_Android",
+  "version": "1.0.0"
 }
